# local-micro-agent

./: .gitignore  README.md  commit_timeline.html  config.example.json  config.example.yaml  config.qwen36-27b-mlx-ollama.json  config.qwen36-35b-mlx-ollama.json  gpt-5.5-agent-config.json  gpt-5.5-hints.md  gpt-5.5-request.txt  local_model_spec_guide.md  pyproject.toml  request.txt
config/: config.gemma4-12b-mlx-ollama.json  config.gemma4-26b-mlx-ollama.json  config.gemma4-31b-mlx-ollama.json  config.lmstudio-qwen36-27b-mlx6bit.json  config.qwen36-27b-mlx-ollama.json  config.qwen36-35b-a3b-coding-mxfp8-ollama-simple.json  config.qwen36-35b-a3b-coding-mxfp8-ollama.json  config.qwen36-35b-mlx-ollama.json
docs/: local-llm-autonomy-experiment-2026-06-14.md  spec-search-controller-design.md
src/local_micro_agent/: __init__.py  candidate_output.py  candidate_repair.py  candidates.py  context.py  decisions.py  mcp_client.py  model_runtime.py  models.py  orchestrator.py  presets.py  prompts.py  search_memory.py  state.py  strategy.py  tactics.py  telemetry.py  todos.py  validators.py
src/local_micro_agent/mixins/: __init__.py  candidates.py  context.py  model_runtime.py  search_memory.py  tactics.py  telemetry.py  todos.py
tests/: test_config_files.py  test_domain_neutrality.py  test_mixin_modules.py  test_orchestrator_safety.py  test_presets.py  test_validators.py
tests/fixtures/spec_runs/design_contract_incomplete_issues12_13/: README.md  candidates.jsonl  run_spec.json  spec_quality_report.json  terminal_state.json  todo_plan.json
(+47 files in other folders)
